# better-eval

./: CMakeLists.txt  Calc  Calc.c  Makefile  README.md  build.sh  main.c
lib/: Functions.c  Functions.h  clib.c  clib.h  debug.c  debug.h
source/: Eval.c  Eval.h  Ident.c  Ident.h  Lexer.c  Lexer.h  Parser.c  Parser.h  eval.c  eval.h
